<resources>
    <string name="app_name">Sports Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">940922219769-tqbatc687v2pt3toomp3laqb7mgs01m8.apps.googleusercontent.com</string>
    <string name="find_product">Find product</string>
    <string name="shop">SHOP</string>
    <string name="latests">Latests</string>
    <string name="shoes">Shoes</string>
    <string name="shirts">Shirts</string>
    <string name="best_seller">best seller</string>
    <string name="overtures">overtures</string>
    <string name="todo">TODO</string>
    <string name="suggests">suggests</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="view_faqs">View FAQs</string>
    <string name="contact_support">Contact Support</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello">Hello</string>
    <string name="language_settings">Language Settings</string>
    <string name="select_language">Select Language</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="vibration">Vibration</string>
    <string name="buy_now">Buy\n Now</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="_4_items">4 items</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="privacy_and_security_settings">Privacy and Security Settings</string>
    <string name="enable_two_factor_authentication">Enable Two-Factor Authentication</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="change_security_questions">Change Security Questions</string>
    <string name="profile">PROFILE</string>
    <string name="phone_number1">phone number :</string>
    <string name="address1">Address :</string>
    <string name="order_history">Order History</string>
    <string name="setting">Setting</string>
    <string name="log_out">log out</string>
    <string name="setting1">Setting</string>
    <string name="account_setting">Account Setting</string>
    <string name="notification_setting">Notification setting</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="payment">payment</string>
    <string name="language">language</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="cart">cart</string>
    <string name="profile1">Profile</string>
    <string name="product_overview">Product Overview</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="password">password</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="are_you_new_user_register">Are You New User? Register</string>
    <string name="purchase_card">PURCHASE CARD</string>
    <string name="card_is_empty">card is empty</string>
    <string name="buy_all">Buy All</string>
    <string name="real_madrid_away">Real Madrid - Away</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="amount">Amount</string>
    <string name="buy_now1">Buy Now</string>
    <string name="wishlist">WISHLIST</string>
    <string name="there_are_no_favorite_items">There are no favorite items</string>
    <string name="purchase_history">Purchase History</string>
    <string name="color1">Color:</string>
    <string name="size1">Size:</string>
    <string name="failed_to_load_cart">Failed to load cart.</string>
    <string name="failed_to_load_favorites">Failed to load favorites</string>
    <string name="latest">Latest</string>
    <string name="sportsshirts">Sports Shirts</string>
    <string name="product_id">Product ID</string>
    <string name="wait">Wait ...</string>
    <string name="delete">Delete</string>
    <string name="new_admin_email">New admin Email</string>
    <string name="add_admin">Add admin</string>
    <string name="add_product">Add Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="edit_products">Edit Products</string>
    <string name="manage_customers">Manage Customers</string>
    <string name="please_enter_id">Please enter ID</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="sizes">Sizes:</string>
    <string name="add">Add</string>
    <string name="category">Category:</string>
    <string name="sports_shoes">Sports Shoes</string>
    <string name="sports_wears">Sports Wears</string>
    <string name="product">product</string>
    <string name="language_set_to">"language set to "</string>
    <string name="enter_new_username">Enter new username:</string>
    <string name="enter_new_password">Enter new password:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="input_cannot_be_empty">Input cannot be empty</string>
    <string name="navigating_to_faqs">Navigating to FAQs</string>
    <string name="enter_your_feedback">Enter your feedback:</string>
    <string name="submit">Submit</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback!</string>
    <string name="feedback_cannot_be_empty">Feedback cannot be empty</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="you_haven_t_bought_anything_yet">You haven\'t bought anything yet!</string>

</resources>