<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/privacy_security_settings_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/privacy_security_settings_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacy_security_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_and_security_settings"
            android:textColor="@color/Purple"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:background="?attr/android:colorBackground">

            <TextView
                android:id="@+id/tv_two_fa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_two_factor_authentication"
                android:textColor="?attr/android:textColorPrimary"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/switch_two_fa"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_clear_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_app_data"
            android:textSize="20sp"
            android:textColor="?attr/android:textColorPrimary"
            android:backgroundTint="?attr/colorSurface"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:elevation="8dp"/>

        <Button
            android:id="@+id/btn_change_security_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_security_questions"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:textColor="?attr/android:textColorPrimary"
            android:backgroundTint="?attr/colorSurface"
            style="@style/Widget.MaterialComponents.CardView"
            android:padding="16dp"
            android:elevation="8dp"/>

    </LinearLayout>
</ScrollView>
